Primeiro ajuste para base de evoolução.